--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="arman.css"> 
-    <title>fast project</title>
+    <title>This is my third repo </title>
 </head>
 <body>
     
@@ -115,6 +115,23 @@ My fb account </a> <br> <br>
 <input type="reset">
 <input type="submit">
 </form>
+
+<!-- Optional dropdown manu -->
+<form class="new-dropdown">
+    <label for="mobile"> Choose a brand:
+
+    <select name="mobile" id="mobile"> 
+    
+    <!-- <option value="choose">choose  </option>  -->
+    <option value="Iphone"> Iphone  </option> 
+    <option value="Samsung  "> Samsung</option> 
+    <option value="Oppo"> Oppo</option> 
+    <option value="Xiomi">Xiomi</option> 
+
+    </select>
+</label>
+</form>
+
 
 </body>
 </html>
