add some information

--- a/index.html
+++ b/index.html
@@ -94,23 +94,23 @@ My fb account </a> <br> <br>
     <label for="email"> Your email : <br> <input type="email" id="email" placeholder="Your email"> </label>
     <label for="Phone"> Your Phone : <br> <input type="number" id="phone" placeholder="Your phone"> </label>
 
-<fieldset>
+<fieldset class="fieldset">
     <legend> pick one pitha</legend>
     <label for="vapa "><input type="radio" name="pitha" id="vapa">pitha </label>
     <label for="vapa "><input type="radio" name="pitha" id="vapa">vapa </label>
     <label for="vapa "><input type="radio" name="pitha" id="vapa">vapa</label>
 </fieldset>
 
-<fieldset> 
+<fieldset class="fieldset"> 
     <legend>pick one item </legend>
     <label for="eat"> <input type="checkbox" name="vat" id="eat">egg </label>
     <label for="eat"> <input type="checkbox" name="dal" id="eat">vat </label>
     <label for="eat"> <input type="checkbox" name="muri" id="eat">muri </label>
 </fieldset>
-<fieldset>
+<fieldset class="fieldset">
     <legend >Special Instruction </legend>
     <textarea name="" id="" cols="57" rows="7" > </textarea>
-</fieldset>
+</fieldset class="submit-reset">
 <br>
 <input type="reset">
 <input type="submit">
