add new information

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 
 </div>
-<p> i am arman </p>
+
+<h4> button tag</h4>
 <button class="ok"> Ok </button><br><br> 
  
 <a href="https://www.facebook.com/md.mdarmankhan.391?mibextid=ZbWKwL" > 
@@ -50,12 +51,7 @@ My fb account </a> <br> <br>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=oWAUaHhSHTKJS4Sx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
  <br> 
-<b> This is arman </b>
 
-<div class="flex">
-<h2> I am arman </h2>
-<h2> Who are you </h2>
-</div>
 
 <h2 class=" heading-pagination"> pagination desigh </h2>
 
